[package]
name = "eris-staking-hub-classic"
version = "1.2.0"
authors = ["devs <devs@erisprotocol.com>"]
edition = "2018"
license = "GPL-3.0-or-later"
repository = "https://github.com/erisprotocol/contracts-terra-classic"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cosmwasm-std = { version = "0.16", features = ["staking"] }
cw2 = "0.9"
cw20 = "0.9"
cw20-base = { version = "0.9", features = ["library"] }
cw-storage-plus = "0.9"
eris = { path = "../../packages/eris" }
terra-cosmwasm = "2.2"

[dev-dependencies]
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
