[package]
name = "test"
version = "0.1.0"
authors = ["nghuyenthevinh2000 <nghuyenthevinh@gmail.com>"]
description = "Simulated chain test on Rust! No need for node! Feel the speed and convenience"
edition = "2018"
license = "GPL-3.0-or-later"
repository = "https://github.com/erisprotocol/contracts-terra-classic"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cosmwasm-std = { version = "1.1", features = ["stargate"] }
cosmwasm-schema = "1.0.4"
eris = { path = "../../packages/eris" }
thiserror = "1"
classic-bindings = "0.1.1"

[dev-dependencies]
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
classic-test-tube = { version = "0.1.0", git = "https://github.com/classic-terra/classic-rust.git", package = "classic-test-tube", rev="4b035dd53ef7010c12fc74728f3b1671066f67bd"}