[package]
name = "eris-stake-token-classic"
version = "1.1.1"
authors = ["devs <devs@erisprotocol.com>"]
edition = "2018"
license = "GPL-3.0-or-later"
repository = "https://github.com/erisprotocol/contracts-terra-classic"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cosmwasm-std = { version = "0.16", features = ["staking"] }
cw20 = "0.9"
cw20-base = { version = "0.9", features = ["library"] }
