[package]
name = "eris-stake-token-classic"
version = "1.1.2"
authors = ["devs <devs@erisprotocol.com>"]
edition = "2018"
license = "GPL-3.0-or-later"
repository = "https://github.com/erisprotocol/contracts-terra-classic"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cosmwasm-std = { version = "1.1", features = ["stargate"] }
cw20 = "0.13.2"
cw20-base = { version = "0.13.2", features = ["library"] }
